JCF: add a docs/requirements.txt file for python so the Material theme can be used

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -8,12 +8,8 @@ version: 2
 mkdocs:
   configuration: mkdocs.yml
 
-# Optionally build your docs in additional formats such as PDF
-#formats:
-#   - pdf
-
-# Optionally set the version of Python and requirements required to build your docs
-#python:
-#   version: 3.7
-#   install:
-#   - requirements: docs/requirements.txt
+# Set the version of Python and requirements required to build your docs
+python:
+    version: 3.8.3
+    install:
+    - requirements: docs/requirements.txt
