JCF: ...the "material" theme is lower case, not upper

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,4 +51,4 @@ nav:
           - README: packages/styleguide/README.md
        - trigemu: packages/trigemu/README.md
 
-theme: Material
+theme: material
