--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -4,5 +4,5 @@ nav:
     - For members of the Software Coordination Group: how_to_make_edits.md
     - Packages:
 
-theme: Material
+theme: material
 
