JCF: at least for the time being, switch over to the mkdocs theme to get the pop-up panel of versions when this page is processed in readthedocs

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -4,7 +4,7 @@ nav:
     - Packages:
 
 theme: 
-   name: material
+   name: mkdocs
    features:
      - navigation.tabs
      - navigation.instant
