--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,7 +97,7 @@ nav:
           - About trigemu: packages/trigemu/README.md
 
 theme: 
-   name: material
+   name: mkdocs
    features:
      - navigation.tabs
      - navigation.instant
