--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,6 +84,8 @@ nav:
           - About ers: packages/ers/README.md
        - ipm:
           - About ipm: packages/ipm/README.md
+       - listrev:
+          - About listrev: packages/listrev/README.md
        - logging:
           - About logging: packages/logging/README.md
           - packages/logging/Home.md
