--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,8 +5,11 @@
 # Required
 version: 2
 
-mkdocs:
-  configuration: mkdocs.yml
+sphinx:
+  configuration: docs/conf.py
+
+formats:
+  - pdf
 
 # Set the version of Python and requirements required to build your docs
 python:
