--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,10 @@
-
-PyYAML==5.4.1
-mkdocs==1.1.2
-mkdocs-material==7.0.5
-mkdocs-material-extensions==1.0.1
-Markdown==3.3.3
-MarkupSafe==1.1.1
+myst_parser
+sphinx_tabs
+sphinx_panels
+sphinx_book_theme>=0.0.36
+sphinx_markdown_tables
+sphinx_theme
+sphinx_copybutton
+sphinx_togglebutton
+sphinx_thebe
+sphinx>=3.4.2
