--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
             cd $GITHUB_WORKSPACE/docs
             rm -rf docs/packages mkdocs.yml
-            pip --install -r docs/requirements.txt
+            pip install -r docs/requirements.txt
             bin/the_final_markdown.sh | tee $GITHUB_WORKSPACE/build_log.txt
             date >> $GITHUB_WORKSPACE/build_log.txt
             #git config user.name github-actions
