--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -2,21 +2,20 @@
 
 name: Build docs
 
-# Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the develop branch
   push:
     branches: [ develop ]
     paths-ignore:
-      - 'docs/packages/*'
-      - mkdocs.yml
-      - .github/*
+      - 'docs/packages/**'
+      - 'mkdocs.yml'
+      - '.github/**'
   pull_request:
     branches: [ develop ]
     paths-ignore:
-      - 'docs/packages/*'
-      - mkdocs.yml
-      - .github/*
+      - 'docs/packages/**'
+      - 'mkdocs.yml'
+      - '.github/**'
     
 
   # Allows you to run this workflow manually from the Actions tab
