--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -47,8 +47,7 @@ jobs:
             git config user.name github-actions
             git config user.email github-actions@github.com
             git add .
-            git commit -m "generated"
-            git push
+            [[ -z $(git status -s) ]] && (git commit -m "generated" && git push)
 
       - name: upload build log
         uses: actions/upload-artifact@v2
