--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -47,7 +47,7 @@ jobs:
             git config user.name github-actions
             git config user.email github-actions@github.com
             git add .
-            [[ git diff-index --quiet HEAD ]] && (git commit -m "generated" && git push)
+            git diff-index --quiet HEAD || (git commit -m "generated" && git push)
 
       - name: upload build log
         uses: actions/upload-artifact@v2
