--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -16,8 +16,8 @@ on:
       - 'docs/packages/**'
       - 'mkdocs.yml'
       - '.github/**'
-  schedule:
-    - cron: "*/15 * * * *"
+  #schedule:
+    #- cron: "*/15 * * * *"
     
 
   # Allows you to run this workflow manually from the Actions tab
