JCF: try out a site description so people don't see "None" below the title when links are pasted in Slack

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: DUNE DAQ Software Documentation Home
+site_description: The Official Documentation for DUNE DAQ Software Users
 nav:
     - Home: README.md
     - Packages:
