--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ theme:
     - navigation.sections
     - navigation.tabs
     - navigation.tracking
+    - navigation.top
     - search.highlight
     - search.share
     - search.suggest
