JCF: Issue #24: attempt to size the version panel so it's the same as with the mkdocs theme

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,10 @@ theme:
   include_search_page: false
   search_index_only: true
 
+  highlightjs: true
+  hljs_languages: []
+  hljs_style: github
+
   # Default values, taken from mkdocs_theme.yml
   language: en
   features:
