JCF: Issue #24: strike a blow for reasoned debate and thoughtful observation by removing link to Twitter account

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,18 +19,8 @@
 # IN THE SOFTWARE.
 
 # Project information
-site_name: Material for MkDocs
-site_url: https://squidfunk.github.io/mkdocs-material/
-site_author: Martin Donath
-site_description: >-
-  Create a branded static site from a set of Markdown files to host the
-  documentation of your Open Source or commercial project – customizable,
-  searchable, mobile-friendly, 40+ languages
-
-# Repository
-repo_name: squidfunk/mkdocs-material
-repo_url: https://github.com/squidfunk/mkdocs-material
-edit_uri: ""
+site_name: DUNE DAQ Software Documentation Home
+site_description: The Official Documentation for DUNE DAQ Software Users
 
 # Copyright
 copyright: Copyright &copy; 2016 - 2021 Martin Donath
@@ -44,7 +34,6 @@ theme:
   static_templates:
     - 404.html
 
-  # Don't include MkDocs' JavaScript
   include_search_page: false
   search_index_only: true
 
@@ -92,17 +81,7 @@ plugins:
 extra:
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/squidfunk
-    - icon: fontawesome/brands/gitter
-      link: https://gitter.im/squidfunk/mkdocs-material
-    - icon: fontawesome/brands/docker
-      link: https://hub.docker.com/r/squidfunk/mkdocs-material/
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/squidfunk
-    - icon: fontawesome/brands/linkedin
-      link: https://linkedin.com/in/squidfunk/
-    - icon: fontawesome/brands/instagram
-      link: https://instagram.com/squidfunk
+      link: https://github.com/DUNE-DAQ
 
 # Extensions
 markdown_extensions:
