--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ copyright: Copyright &copy; 2016 - 2021 Martin Donath
 theme:
   name: material
   custom_dir: overrides
+  font: false
 
   language: en
 
@@ -41,6 +42,12 @@ theme:
     - search.highlight
     - search.share
     - search.suggest
+
+  palette:
+    scheme: light
+    primary: teal
+    accent: indigo
+
 
 extra_javascript:
   - javascripts/base.js
