--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -1,11 +1,158 @@
+# Copyright (c) 2016-2021 Martin Donath <martin.donath@squidfunk.com>
+
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to
+# deal in the Software without restriction, including without limitation the
+# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
+# sell copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+
+# The above copyright notice and this permission notice shall be included in
+# all copies or substantial portions of the Software.
+
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
+# IN THE SOFTWARE.
+
+# Project information
 site_name: DUNE DAQ Software Documentation Home
 site_description: The Official Documentation for DUNE DAQ Software Users
-nav:
-    - Home: README.md
-    - Packages:
 
-theme: 
-   name: mkdocs
-   features:
-     - navigation.tabs
-     - navigation.instant
+# Copyright
+copyright: Copyright &copy; 2016 - 2021 Martin Donath
+
+theme:
+  name: material
+  custom_dir: overrides
+  font: false
+
+  language: en
+
+  features:
+    - content.tabs.link
+    # - navigation.instant
+    - navigation.sections
+    - navigation.tabs
+    - navigation.tracking
+    - navigation.top
+    - search.highlight
+    - search.share
+    - search.suggest
+
+  palette:
+    - scheme: default
+      primary: teal
+      toggle:
+        icon: material/eye-outline
+        name: Switch to dark background
+    - scheme: slate
+      primary: teal
+      toggle:
+        icon: material/eye
+        name: Switch to light background
+
+extra_javascript:
+  - javascripts/base.js
+  - javascripts/bootstrap.min.js
+  - javascripts/jquery-1.10.2.min.js
+
+# Plugins
+plugins:
+  - search
+
+# Customization
+extra:
+  generator: false
+  version:
+    provider: mike
+
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/DUNE-DAQ
+
+# Extensions
+markdown_extensions:
+  - admonition
+  - abbr
+  - attr_list
+  - def_list
+  - footnotes
+  - meta
+  - md_in_html
+  - toc:
+      permalink: true
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.critic
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.highlight
+  - pymdownx.inlinehilite
+  - pymdownx.keys
+  - pymdownx.magiclink:
+      repo_url_shorthand: true
+      user: squidfunk
+      repo: mkdocs-material
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid-experimental
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.tabbed
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
+
+# Page tree
+nav:
+    - Table of Contents: 
+       - Overview:
+          - README.md
+       - Toolset:
+          - daq-buildtools:
+          - daq-cmake:
+          - daq-release:
+          - styleguide:
+       - Core:   
+          - appfwk:
+          - cmdlib:
+          - ers:
+          - logging:
+       - Readout:
+          - dataformats:
+          - flxlibs:
+          - readout:
+       - Control:
+          - minidaqapp:
+          - nanorc:
+          - restcmd:
+       - Dataflow (logical):
+          - dfmessages:
+	  - dfmodules:
+          - timing:
+          - timinglibs:
+          - trigemu:
+       - Dataflow (physical):
+          - ipm:
+          - nwqueueadapters:
+          - serialization:
+       - Monitoring:
+          - erses:
+          - influxopmon:
+          - opmonlib:
+       - Educational:
+          - listrev:
+
+
+
