JCF: another attempt to make the default be the light background

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -44,7 +44,8 @@ theme:
     - search.suggest
 
   palette:
-    - scheme: slate
+    - media: "(prefers-color-scheme: light)"
+      scheme: slate
       primary: teal
       toggle:
         icon: material/eye
