--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -167,8 +167,8 @@ nav:
              - packages/flxlibs/Checking-Debugging-Optical-Fibre-Status.md
              - packages/flxlibs/Configure-the-FELIX-card.md
              - packages/flxlibs/Enabling-links-through-software.md
-             - packages/flxlibs/FELIX-Software-Suite-hack.md
              - packages/flxlibs/FELIX-assets.md
+             - packages/flxlibs/FELIX-Software-Suite-hack.md
              - packages/flxlibs/Initial-setup-of-FELIX.md
              - packages/flxlibs/Local-driver.md
              - packages/flxlibs/Using-fdaq.md
@@ -196,6 +196,9 @@ nav:
              - About timinglibs: packages/timinglibs/README.md
           - trigemu:
              - About trigemu: packages/trigemu/README.md
+          - trigger:
+             - About trigger: packages/trigger/README.md
+             - packages/trigger/trigger-alg-howto.md
        - Dataflow (physical):
           - ipm:
              - About ipm: packages/ipm/README.md
