JCF: add kafkaopmon to the documentation based on August 4th Slack chat with Alessandro and Giovanna

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -154,6 +154,7 @@ nav:
        - Monitoring:
           - erses:
           - influxopmon:
+          - kafkaopmon:
           - opmonlib:
        - Educational:
           - listrev:
