JCF: add erskafka to the documentation based on August 4th Slack chat with Alessandro and Giovanna

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -153,6 +153,7 @@ nav:
           - serialization:
        - Monitoring:
           - erses:
+          - erskafka:	
           - influxopmon:
           - kafkaopmon:
           - opmonlib:
