JCF: in anticipation of the v2.8.2 documentation, replace dataformats with daqdataformats, detdataformats, and detchannelmaps

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -132,7 +132,9 @@ nav:
           - ers:
           - logging:
        - Readout:
-          - dataformats:
+          - daqdataformats:
+          - detchannelmaps:
+          - detdataformats:
           - flxlibs:
           - lbrulibs:
           - readout:
