JCF: split the readout package into its four new component packages. Note that while Issues have been filed, documentation is not yet complete

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -133,9 +133,12 @@ nav:
           - logging:
        - Readout:
           - dataformats:
+          - fdreadoutlibs:
           - flxlibs:
           - lbrulibs:
-          - readout:
+          - ndreadoutlibs:
+          - readoutlibs:
+          - readoutmodules:
        - Control:
           - minidaqapp:
           - nanorc:
