JCF: remove now-obsolete dataformats and add daqdataformats, detdataformats and detchannelmaps

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -132,7 +132,9 @@ nav:
           - ers:
           - logging:
        - Readout:
-          - dataformats:
+          - daqdataformats:
+          - detchannelmaps:
+          - detdataformats:
           - fdreadoutlibs:
           - flxlibs:
           - lbrulibs:
