JCF: add in Eric's work on the NetworkManager documentation

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -153,6 +153,7 @@ nav:
           - trigger:
        - Dataflow (physical):
           - ipm:
+          - networkmanager:
           - nwqueueadapters:
           - serialization:
        - Monitoring:
