--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -216,6 +216,8 @@ nav:
        - Dataflow (physical):
           - ipm:
              - About ipm: packages/ipm/README.md
+          - networkmanager:
+             - About networkmanager: packages/networkmanager/README.md
           - nwqueueadapters:
              - About nwqueueadapters: packages/nwqueueadapters/README.md
           - serialization:
