--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -147,6 +147,7 @@ nav:
        - Dataflow (logical):
           - dfmessages:
           - dfmodules:
+	  - hdf5libs:
           - timing:
           - timinglibs:
           - trigemu:
