JCF: get documentation to reflect the renaming of minidaqapp as daqconf

--- a/bin/mkdocs_skeleton.yml
+++ b/bin/mkdocs_skeleton.yml
@@ -141,7 +141,7 @@ nav:
           - readoutlibs:
           - readoutmodules:
        - Control:
-          - minidaqapp:
+          - daqconf:
           - nanorc:
           - restcmd:
        - Dataflow (logical):
