--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,5 @@
+# REMINDER: USE SPACES INSTEAD OF TABS IN THIS FILE
+
 # Copyright (c) 2016-2021 Martin Donath <martin.donath@squidfunk.com>
 
 # Permission is hereby granted, free of charge, to any person obtaining a copy
@@ -153,6 +155,9 @@ nav:
           - logging:
              - About logging: packages/logging/README.md
              - packages/logging/ers-conventions.md
+          - utilities:
+             - About utilities: packages/utilities/README.md
+             - packages/utilities/WorkerThread-Usage-Notes.md
        - Readout:
           - daqdataformats:
              - About daqdataformats: packages/daqdataformats/README.md
